# open_spiel_playground

./: .gitignore  cliff_walk.py  mcts_annotated.py  mcts_ttt_annotated.py  mcts_vs_andoma.py  print_bots.py  pyproject.toml  readme.md  requirements.txt  simple_chess_example.py
alpha_zero/: .gitignore  pyproject.toml  readme.md
andoma/: andoma_bot.py  movegeneration.py
az2/: pyproject.toml
chess/: bot_vs_bot.py  mcts_annotated.py  mcts_vs_andoma.py  mcts_vs_random.py  text_interface.py  watch_chess_replay.py  zmq_client_example.py  zmq_server_example.py
chess/andoma/: andoma_bot.py  readme.md
getting_started/: cliff_walk.py  print_games.py  pyproject.toml  simple_game_example.py
mychess/: pyproject.toml  text_interface.py  zmq_client_example.py
ttt/: pyproject.toml  readme.md
zmq_ttt/: bot_client.py  client.py  game_server.py  local_example.py  network_bot.py  network_game.py  networking.py  performance_comparison.py  play_one_verbose_game.py  pyproject.toml  random_client.py  readme.md  server.py  tests.py
